--- a/public/index.html
+++ b/public/index.html
@@ -69,8 +69,8 @@
     <div class="bulb-control">
         <div class="bulb-name">Living Room Bulb</div>
         <div class="button-group">
-            <button class="on-button" onclick="controlBulb('living-room-bulb', 'on')">Turn On</button>
-            <button class="off-button" onclick="controlBulb('living-room-bulb', 'off')">Turn Off</button>
+            <button class="on-button" onclick="controlBulb('living', 'on')">Turn On</button>
+            <button class="off-button" onclick="controlBulb('living', 'off')">Turn Off</button>
         </div>
         <div id="living-room-status" class="status"></div>
     </div>
@@ -78,8 +78,8 @@
     <div class="bulb-control">
         <div class="bulb-name">Bedroom Bulb</div>
         <div class="button-group">
-            <button class="on-button" onclick="controlBulb('bedroom-bulb', 'on')">Turn On</button>
-            <button class="off-button" onclick="controlBulb('bedroom-bulb', 'off')">Turn Off</button>
+            <button class="on-button" onclick="controlBulb('room', 'on')">Turn On</button>
+            <button class="off-button" onclick="controlBulb('room', 'off')">Turn Off</button>
         </div>
         <div id="bedroom-status" class="status"></div>
     </div>
